--- a/app/src/main/res/layout/values_accelerometer.xml
+++ b/app/src/main/res/layout/values_accelerometer.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:showIn="@layout/activity_compass" >
+    >
 
 
         <TextView
@@ -33,3 +33,4 @@
 
 </LinearLayout>
 
+    <!--tools:showIn="@layout/activity_compass"-->
